# label-verification-app

./: .gitignore  README.md  label_verification.db  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
app/: layout.tsx
app/chat/: page.tsx
backend/: database.py  main.py  models.py  schemas.py
backend/config/: main.py
backend/services/: llm_service.py  modal_service.py
backend/tests/: test_database.py  test_llm_service.py  test_main.py  test_schemas.py
tests/: setup.ts
tests/frontend/: chat-page.test.tsx
