[project]
name = "label-verification-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "aiohttp>=3.14.1",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.19.0",
    "mlx>=0.31.2",
    "modal>=1.5.0",
    "openai>=2.41.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "sqlmodel>=0.0.38",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mlx-lm>=0.31.3",
    "mlx-vlm>=0.6.3",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = ["integration: requires live Modal endpoint"]
